Arreglo mapa.